--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,65 @@ body {
     background-color: #f4f4f9;
 }
 
+.menu-button {
+    position: absolute; /* 固定位置 */
+    top: 20px; /* 距離視窗頂部的距離 */
+    left: 10px; /* 距離視窗左側的距離 */
+    background: none;
+    border: none;
+    color: #333;
+    font-size: 20px;
+    cursor: pointer;
+    z-index: 1000; /* 確保按鈕顯示在最上層 */
+}
+
 header {
+    position: fixed; /* 固定位置 */
+    top: 0; /* 固定在視窗頂部 */
+    left: 0; /* 固定在視窗左側 */
+    width: 100%; /* 填滿視窗寬度 */
     background-color: #4CAF50;
-    color: white;
-    padding: 10px 0;
+    padding: 3x 0;
     text-align: center;
+    z-index: 999; /* 確保 header 在最上層，但低於 menu button */
+}
+
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    z-index: 1000;
+}
+
+.sidebar a {
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidebar a:hover {
+    background-color: #575757;
+}
+
+.sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 20px;
+    font-size: 36px;
+}
+
+#main-content {
+    transition: margin-left 0.5s ease; /* 平滑過渡 */
+    padding: 20px;
 }
 
 section {
@@ -20,12 +74,18 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 70px;
     margin-bottom: 20px;
 }
 
 .profile-info img {
     border-radius: 50%;
     margin-right: 20px;
+}
+
+.btc img{
+    margin-top: 100px;
+    margin-left: 525px;
 }
 
 h2 {
@@ -38,7 +98,7 @@ p {
 }
 
 .contact-info {
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 footer {
