--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,11 @@ section {
     margin-right: 20px;
 }
 
-.btc img{
-    margin-top: 100px;
-    margin-left: 525px;
+.btc {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 90px;
 }
 
 h2 {
