--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,19 @@ body {
     cursor: pointer;
     z-index: 1000; /* 確保按鈕顯示在最上層 */
 }
+@media (max-width: 390px) {
+    .menu-button {
+        position: absolute;
+        left: 7px;  /* 在6.1吋手機上，讓按鈕離左邊稍微多一點 */
+        top: 15px;
+        background: none;
+        border: none;
+        color: #333;
+        font-size: 27px;
+        cursor: pointer;
+        z-index: 1000; /* 確保按鈕顯示在最上層 */
+    }
+}
 
 header {
     position: fixed; /* 固定位置 */
