--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -35,7 +36,7 @@ header {
     top: 0; /* 固定在視窗頂部 */
     left: 0; /* 固定在視窗左側 */
     width: 100%; /* 填滿視窗寬度 */
-    background-color: #4CAF50;
+    background-color: dodgerblue;
     padding: 3x 0;
     text-align: center;
     z-index: 999; /* 確保 header 在最上層，但低於 menu button */
@@ -114,6 +115,11 @@ p {
 
 .contact-info {
     margin-top: 30px;
+}
+
+.blog{
+    text-align: center;
+    margin-top: 70px;
 }
 
 footer {
