--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,10 @@ p {
     margin-top: 70px;
 }
 
+.Karp21{
+    text-align: center;
+}
+
 footer {
     background-color: #333;
     color: white;
