distance in blog

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,13 @@ p {
     text-align: center;
 }
 
+hr {
+  border: none;
+  border-top: 3px dashed #5a5a5a;
+  margin: 24px 0;
+}
+
+
 footer {
     background-color: #333;
     color: white;
