--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ header {
     left: 0; /* 固定在視窗左側 */
     width: 100%; /* 填滿視窗寬度 */
     height: 60px;
-    background-color: dodgerblue;
+    background-color: rgb(202, 204, 205);
     padding: 3px 0;
     text-align: center;
     z-index: 999; /* 確保 header 在最上層，但低於 menu button */
@@ -63,6 +63,36 @@ header h2 {
     padding-top: 65px;
     z-index: 1000;
 }
+
+.notes-label {
+  color: white;                 /* 讓 Notes 文字變白 */
+  font-size: 20px;
+  padding: 10px 15px;
+  cursor: pointer;              /* 滑鼠變手型 */
+  display: block;
+  transition: background-color 0.3s;
+}
+
+.notes-label:hover {
+  background-color: #575757;    /* hover 效果跟連結一致 */
+}
+
+#notes {
+  color: white;
+}
+.notes-list {
+  display: none;
+  flex-direction: column;
+  margin-left: 20px;
+}
+
+.notes-list a {
+  color: #ddd;
+  text-decoration: none;
+  padding: 5px 15px;
+  display: block;
+}
+
 
 .sidebar a {
     padding: 10px 15px;
