--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ header h2 {
 
 .notes-label {
   color: white;                 /* 讓 Notes 文字變白 */
-  font-size: 20px;
+  font-size: 17px;
   padding: 10px 15px;
   cursor: pointer;              /* 滑鼠變手型 */
   display: block;
@@ -86,18 +86,18 @@ header h2 {
   margin-left: 20px;
 }
 
-.notes-list a {
+.sidebar .notes-list a {
   color: #ddd;
   text-decoration: none;
-  padding: 5px 15px;
+  padding: 5px 30px;
   display: block;
+  font-size: 15px;
 }
-
 
 .sidebar a {
     padding: 10px 15px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 17px;
     color: white;
     display: block;
     transition: 0.3s;
