--- a/css/graph.css
+++ b/css/graph.css
@@ -43,3 +43,11 @@ canvas {
   background: #fff;
   display: block;
 }
+
+.time-box {
+  display: inline-block;
+  padding: 5px 10px;
+  background-color: #e3e3e3;
+  border-radius: 5px;
+  margin-left: 10px;
+}
